--- a/style.css
+++ b/style.css
@@ -136,46 +136,56 @@ body {
 }
 
 .card {
-    visibility: hidden;
+
     position: absolute;
-    left: 100%;
+    transform: scale(1%, 1%);
     left: calc(50% - (38.8vh / 2));
     background: url("img/desktop_bg.png") no-repeat;
     background-size: cover;
     width: 38.8vh;
     height: 66.7vh;
     margin: 10% auto 0;
-    box-shadow: 0px 0px 16px 0px rgba(17, 67, 132, 0.60);
+    padding: 1.5vh;
+    
     border-radius: 40px;
 
 
 }
+
 .card {
     transition: transform 0.5s ease;
-  }
-  
-  .card.active.animate-out-left {
+}
+
+.card.top {
+    z-index: 5;
+}
+
+
+.card.active.animate-out-left {
     transform: translateX(-200%);
-  }
-  
-  .card.active.animate-out-right {
-    transform: translateX(200%);
-  }
+}
+
+
 
 .card.out {
     visibility: hidden;
-    transition: 0.2s;
+    transition: 0.1s;
     /* left: -100%; */
 
 }
 
 
 .card.active {
-    animation: fadeInActive 0.5s;
+    /* animation: fadeInActive 0.5s; */
+
+    transform: scale(100%, 100%);
+    transition: 0.54s;
     visibility: visible;
+    box-shadow: 0px 0px 16px 0px rgba(17, 67, 132, 0.60);
 
 
 }
+
 .card.active.left {
     animation: fadeInActiveLeft 0.5s;
     visibility: visible;
@@ -188,6 +198,7 @@ body {
         left: 200%;
     }
 }
+
 @keyframes fadeInActiveLeft {
     from {
         left: -200%;
@@ -196,10 +207,9 @@ body {
 
 
 .display {
-    width: 90%;
+    width: 100%;
     background: #ffffff;
-    height: 95%;
-    margin: 5%;
+    height: 100%;
     border-radius: 28px;
     position: relative;
 }
@@ -210,9 +220,9 @@ body {
     font-style: normal;
     font-weight: 400;
     position: absolute;
-    left:calc(50% - (75% / 2));
+    left: calc(50% - (75% / 2));
     top: 23%;
-    
+
 
 }
 
@@ -221,7 +231,7 @@ body {
     width: 50%;
     justify-content: space-between;
     position: absolute;
-    left:calc(50% - (50% / 2));
+    left: calc(50% - (50% / 2));
     bottom: 5%;
 }
 
@@ -242,7 +252,7 @@ button {
 
     background-image: url("img/Union (4).svg");
     background-size: cover;
-    background-repeat: no-repeat ;
+    background-repeat: no-repeat;
 
     text-align: center;
     font-size: 16px;
@@ -252,19 +262,20 @@ button {
     text-transform: uppercase;
 
 }
+
 button:active {
     background: #256ece;
     transition: 0.2s;
     background-image: url("img/Union (4).svg");
     background-size: cover;
-    background-repeat: no-repeat ;
+    background-repeat: no-repeat;
 }
 
 .hidden {
     display: none;
 }
 
-.card:nth-child(odd) {
+/* .card:nth-child(odd) {
 
     transform: rotate(-1deg);
 
@@ -272,7 +283,7 @@ button:active {
 
 .card:nth-child(even) {
     transform: rotate(1deg);
-}
+} */
 
 
 @media (min-device-width: 933px) {
