--- a/style.css
+++ b/style.css
@@ -12,7 +12,14 @@
 
     font-style: normal;
 }
+@font-face {
+    font-family: "YS Text";
+    src: url('fonts/YandexSansText-Regular.ttf') format('truetype');
 
+    font-weight: normal;
+
+    font-style: normal;
+}
 * {
     box-sizing: border-box;
     margin: 0;
@@ -151,6 +158,7 @@ body {
 
 .card {
     transition: transform 0.5s ease;
+    border: 2px solid #000;
 }
 
 
@@ -169,7 +177,7 @@ body {
     transform: scale(100%, 100%);
     transition: 0.54s;
     visibility: visible;
-    box-shadow: 0px 0px 16px 0px rgba(17, 67, 132, 0.60);
+    
 
 
 }
@@ -205,15 +213,20 @@ body {
 }
 
 .display p {
-    width: 80%;
+    width: 90%;
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
+    position: relative;
+    left: calc(50% - (90% / 2));
+    top: 10%;
+
+
+}
+.img_card {
+    width: 100%;
     position: absolute;
-    left: calc(50% - (75% / 2));
-    top: 23%;
-
-
+    bottom: 10%;
 }
 
 .ellipses {
@@ -228,37 +241,31 @@ body {
 
 button {
     z-index: 1;
-    width: 85%;
     margin: 0 auto;
     display: block;
-    border-radius: 20px;
-    background: #164C93;
-    height: 62px;
     padding: 20px 100px;
-    box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.35);
-    border: none;
-    color: #FFF;
-    position: relative;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    border-radius: 28px;
+    background: rgba(22, 76, 147, 0.15);
+    border: 0;
+    backdrop-filter: blur(6px);
 
-    background-image: url("img/Union (4).svg");
-    background-size: cover;
-    background-repeat: no-repeat;
+    color: #000;
 
-    text-align: center;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 800;
-    letter-spacing: 1.6px;
-    text-transform: uppercase;
-
+font-family: "YS Text";
+font-size: 18px;
+font-style: normal;
+font-weight: 400;
+line-height: 120%; /* 21.6px */
+letter-spacing: -0.18px;
+transition: 0.2s;
 }
 
 button:active {
-    background: #256ece;
     transition: 0.2s;
-    background-image: url("img/Union (4).svg");
-    background-size: cover;
-    background-repeat: no-repeat;
+    background: rgba(22, 76, 147, 0.25);
 }
 
 .hidden {
