--- a/style.css
+++ b/style.css
@@ -141,6 +141,23 @@ body {
     width: 100%;
     overflow: hidden;
 }
+#skip {
+position: fixed;
+top: 15px;
+right: 30px;
+
+
+color: #164C93;
+
+text-align: right;
+font-family: "YS Display";
+font-size: 16px;
+font-style: normal;
+font-weight: 500;
+line-height: 120%; /* 19.2px */
+letter-spacing: 1.6px;
+text-transform: uppercase;
+}
 
 .card {
     position: absolute;
